# jianpu-generator

./: Cargo.toml  demo.jianpu  syntax.md  彌勒淨土鄉.jianpu
.github/workflows/: pages.yml
crates/jianpu-wasm/: Cargo.toml
crates/jianpu-wasm/src/: lib.rs  tests.rs  types.rs
docs/: CLIPPY_LINT_ROADMAP.md
docs/superpowers/plans/: 2026-06-04-interleaved-syntax.md  2026-06-04-system-bars.md  2026-06-05-lower-octave-dot-positioning.md  2026-06-05-pretty-errors.md  2026-06-05-wav-generation.md  2026-06-06-split-tracks-flag.md  2026-06-08-parts-section.md  2026-06-10-timed-lexer-rd-parser.md
docs/superpowers/specs/: 2026-06-04-interleaved-syntax-design.md  2026-06-04-multi-part-design.md  2026-06-04-system-bars-design.md  2026-06-05-lower-octave-dot-positioning-design.md  2026-06-05-pretty-errors-design.md  2026-06-06-chord-track-design.md  2026-06-06-ditto-input-dedup-design.md  2026-06-06-split-tracks-flag-design.md  2026-06-08-implicit-ditto-padding-design.md  2026-06-08-parts-section-design.md  2026-06-09-directive-row-design.md  2026-06-09-grouping-validation-design.md  2026-06-10-timed-lexer-rd-parser-design.md  2026-06-12-svg-variant-id-design.md
jianpu-generator/: Cargo.toml  demo.jianpu
jianpu-generator/src/: error.rs  grouper.rs  main.rs  pdf.rs  renderer.rs  utils.rs
jianpu-generator/src/ast/: grouped.rs  parsed.rs
jianpu-generator/src/layout/: mod.rs  types.rs
jianpu-generator/src/parser/: metadata_parser.rs  mod.rs  section_splitter.rs
jianpu-generator/src/parser/lyrics/: tokenizer.rs
jianpu-generator/tests/: integration.rs
scripts/git-hooks/: pre-commit
src/: combiner.rs  desugar.rs  error.rs  error_reporter.rs  grouper.rs  grouping.rs  lib.rs  main.rs  midi.rs  pdf.rs  renderer.rs  utils.rs  wav.rs
src/ast/: grouped.rs  mod.rs  parsed.rs
src/compiler/: mod.rs  tests.rs  types.rs
src/compositor/: header_footer.rs  mod.rs
src/coordinate_resolver/: resolve.rs  tests.rs
src/grid_layout/: layout.rs  tests.rs  types.rs
src/grouper/: mod.rs  tests.rs
src/layout/: layout_engine.rs  mod.rs  types.rs
src/layout/tests/: bars.rs  directive.rs  mod.rs  notes.rs  section.rs  slur_tie.rs
src/parser/: metadata_parser.rs  mod.rs  parts_parser.rs  section_splitter.rs
src/parser/score/: chord_parser.rs  interleaved_parser.rs  interleaved_parser_padding_tests.rs  interleaved_parser_test_helpers.rs  interleaved_parser_tests.rs  mod.rs  token_parser.rs
src/renderer/: new_renderer.rs  new_types.rs
src/serializer/: mod.rs
src/tests/: ditto.rs  render.rs
tests/: demo_source.rs  integration.rs
web/: biome.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx  defaultSource.ts  fileStore.ts  index.css  main.tsx  partToggleCache.ts  types.ts
web/src/components/: Editor.tsx  ErrorPanel.tsx  FileList.tsx  PartToggles.tsx  PlayMeasureButton.tsx  Preview.tsx
web/src/hooks/: useFileStore.ts  useJianpuRender.ts  useJianpuWorker.ts
web/src/utils/: byteSpan.ts
web/src/worker/: jianpu.worker.ts
(+12 files in other folders)
