[package]
name = "jianpu-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jianpu"
path = "src/main.rs"

[dependencies]
ariadne = "0.6"
clap = { version = "4", features = ["derive"] }
svg2pdf = "0.12"
pdf-writer = "0.12"
itertools = "0.13"
nonempty = "0.10"
midly = "0.5"
oxisynth = "0.0.5"
hound = "3"

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Hard-block common AI-agent shortcuts and stub code.
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
mem_forget = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

wildcard_imports = "deny"
exit = "deny"
len_zero = "deny"
cognitive_complexity = "deny"
too_many_lines = "deny"
too_many_arguments = "deny"
type_complexity = "deny"
uninlined_format_args = "allow"
redundant_clone = "deny"
needless_pass_by_value = "deny"
match_wildcard_for_single_variants = "deny"
indexing_slicing = "deny"
