[workspace]
members = [".", "crates/jianpu-wasm"]
resolver = "2"

[package]
name = "jianpu-generator"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jianpu"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "pdf", "midi", "wav"]
pdf = ["dep:svg2pdf", "dep:pdf-writer", "dep:zip"]
midi = ["dep:midly"]
wav = ["midi", "dep:oxisynth", "dep:hound"]

[dependencies]
ariadne = "0.6"
itertools = "0.13"
nonempty = "0.10"
clap = { version = "4", features = ["derive"], optional = true }
svg2pdf = { version = "0.12", optional = true }
pdf-writer = { version = "0.12", optional = true }
midly = { version = "0.5", optional = true }
oxisynth = { version = "0.0.5", optional = true }
hound = { version = "3", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Hard-block common AI-agent shortcuts and stub code.
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
mem_forget = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"

wildcard_imports = "deny"
exit = "deny"
len_zero = "deny"
cognitive_complexity = "deny"
too_many_lines = "deny"
too_many_arguments = "deny"
type_complexity = "deny"
uninlined_format_args = "allow"
redundant_clone = "deny"
needless_pass_by_value = "deny"
match_wildcard_for_single_variants = "deny"
indexing_slicing = "deny"
