[package]
name = "jianpu-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wav = ["jianpu-generator/wav"]
pdf = ["jianpu-generator/pdf"]

[dependencies]
jianpu-generator = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
